MEDIUM / add swagger definitions
